--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Gema
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Ejercicios de mates, dibujo, etc.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,15 +18,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: gsantistebanes@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: gsantistebanes
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: gsantistebanes
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -52,7 +52,8 @@ baseurl: ""
 #
 # !! You don't need to change any of the configuration flags below !!
 #
-
+markdown: kramdown
+highlipter: rouge
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
