--- a/_config.yml
+++ b/_config.yml
@@ -53,14 +53,14 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 markdown: kramdown
-highlipter: rouge
+highlighter: rouge
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
+kramdown: markdown
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
   input: GFM
   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
